# Stickman_Rider

./: CMakeLists.txt  README.md  main.cpp
AudioFile/: AudioFile.cpp
src/Controller/: Controller.cpp  controller.h
src/Scenario/: scenario.cpp  scenario.h
src/Song/: song.cpp  song.h
src/Track/: Track.cpp
